rounded corners added

--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -46,7 +46,7 @@
           <div>
             <figure>
               <img
-                class="caption"
+                class="caption rounded"
                 src="{{ url_for('static', filename='img/aboutus/founder.jpg') }}"
                 alt="Founder"
               />
