--- a/project/templates/activities.html
+++ b/project/templates/activities.html
@@ -2,122 +2,165 @@
 //Made by Anh Khôi” -->
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/activities_page.css') }}" />
-    
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/activities_page.css') }}"
+    />
+
     <title>Activities</title>
-    <link rel="icon" href="{{ url_for('static', filename='img/aboutus/logo.png') }}" type="image/x-icon" />
-</head>
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename='img/aboutus/logo.png') }}"
+      type="image/x-icon"
+    />
+  </head>
 
-<body>
-
+  <body>
     {% include 'navbar.html' %}
 
-            <div id="activities_news">
-                <div class="content_block">
-            
-                  <div class="image2">
-                    <img src="{{ url_for('static', filename='img/activities_page/activities_page_1.jpg') }}" 
-                    class="img" alt="TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?">
-                  </div>
-                  <div class="content2">
-                    <div class="block_header">
-                      <div class="text1">TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?</div>
-                    </div>
-                    <span class="text2"> Liệu bạn có biết mùa Tết của “Công dân toàn cầu” có gì khác biệt? Nếu là người dân Việt Nam chắc hẳn bạn cũng chẳng xa lạ gì với các nghi thức truyền thống như dọn dẹp, lì xì, nấu bánh chưng, tảo mộ,...
-                    </span>
-                    <div class="readmore">
-                       <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0kH4rnxhLiHesvXGJsoscLg1qTBYNUBHfFpZtGwvXkQVVoadSEkaEHuQt729o9APRl"
-                        class="text3"> Read More</a>
-                    </div>
-                  </div>
-            
-            
-                </div>
-            
-                <div class="content_block">
-                  <div class="content2">
-                    <div class="block_header">
-                      <div class="text1">ECO WRAPUP: CÙNG TỔNG KẾT NĂM CŨ CỦA BẠN</div>
-                    </div>
-                    <span class="text2">Năm mới Quý Mão đang dần đến gõ cửa, khép lại hành trình của năm cũ và mở ra một cánh cửa mới với thật nhiều cuộc phiêu lưu đang chờ đón bạn...
-                    </span>
-                    <div class="readmore">
-                        <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02eJem4sn4VZD2kk4WAvDugTStU4UMuMBXjbJ9p4D57svRWiUMjBbyZ7AbhL1rggoGl" class="text3"> Read More</a>
-                    </div>
-                  </div>
-                  <div class="image2">
-                      <img src="{{ url_for('static', filename='img/activities_page/activities_page_2.jpg') }}" 
-                      class="img" alt="">
-                  </div>
-                </div>
-            
-                <div class="content_block">
-                  <div class="image2">
-                    <img src="{{ url_for('static', filename='img/activities_page/activities_page_3.jpg') }}"
-                     class="img" alt="" class="anh">
-                  </div>
-                  <div class="content2">
-                    <div class="block_header">
-                      <div class="text1">ECO MÙA TẾT: ĂN TẾT NHƯNG VẪN SỐNG XANH?</div>
-                    </div>
-                    <span class="text2">Có lẽ đối với mọi người dân Việt Nam, mùa tết đến chính là khoảng thời gian chúng chúng ta mong chờ nhất trong suốt một năm... 
-            
-                    </span>
-                    <div class="readmore">
-                        <a href="https://www.facebook.com/photo?fbid=128195530141901&set=a.107563378871783" class="text3"> Read More</a>
-                    </div>
-                  </div>
-            
-                </div>
-            
-            
-                <div class="content_block">
-            
-                  <div class="content2">
-                    <div class="block_header">
-                      <div class="text1">ECO MEME: GIẢI TRÍ CÙNG ECO SMART VIETNAM</div>
-                    </div>
-                    <span class="text2">Meme hay còn được gọi với cái tên thân thương hơn là ảnh chế là một trong những điều không thể thiếu được trong các cuộc trò chuyện giữa bạn bè, hội nhóm ngày nay...
-            
-                    </span>
-                    <div class="readmore">
-                        <a href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02HGfZksdhgGQGhurdfsDJetKQeFuEpPsyD1F5JgUMgL31eFmqvsc2AhG4j7aZSgNXl" class="text3"> Read More</a>
-                    </div>
-                  </div>
-                  <div class="image2">
-                    <img src="{{ url_for('static', filename='img/activities_page/activities_page_4.jpg') }}" 
-                    class="img" alt="">
-                  </div>
-                </div>
-            
-            
-                <div class="content_block">
-                  <div class="image2">
-                    <img src="{{ url_for('static', filename='img/activities_page/activities_page_5.jpg') }}" 
-                    class="img" alt="">
-                  </div>
-                  <div class="content2">
-                    <div class="block_header">
-                      <div class="text1">Ready for phase 2: TAKING OFF!</div>
-                    </div>
-                    <span class="text2">#ESV #ECO #ECOSMARTVIETNAM #IMPACT
-                    </span>
-                    <div class="readmore">
-                        <a href="https://www.facebook.com/photo?fbid=126644343630353&set=a.105895305705257" class="text3"> Read More</a>
-                    </div>
-                  </div>
-
-            </div>
+    <div id="activities_news">
+      <div class="content_block rounded">
+        <div class="image2">
+          <img
+            src="{{ url_for('static', filename='img/activities_page/activities_page_1.jpg') }}"
+            class="img"
+            alt="TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?"
+          />
         </div>
-            
+        <div class="content2">
+          <div class="block_header">
+            <div class="text1">TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?</div>
+          </div>
+          <span class="text2">
+            Liệu bạn có biết mùa Tết của “Công dân toàn cầu” có gì khác biệt?
+            Nếu là người dân Việt Nam chắc hẳn bạn cũng chẳng xa lạ gì với các
+            nghi thức truyền thống như dọn dẹp, lì xì, nấu bánh chưng, tảo
+            mộ,...
+          </span>
+          <div class="readmore">
+            <a
+              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0kH4rnxhLiHesvXGJsoscLg1qTBYNUBHfFpZtGwvXkQVVoadSEkaEHuQt729o9APRl"
+              class="text3"
+            >
+              Read More</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="content_block rounded">
+        <div class="content2">
+          <div class="block_header">
+            <div class="text1">ECO WRAPUP: CÙNG TỔNG KẾT NĂM CŨ CỦA BẠN</div>
+          </div>
+          <span class="text2"
+            >Năm mới Quý Mão đang dần đến gõ cửa, khép lại hành trình của năm cũ
+            và mở ra một cánh cửa mới với thật nhiều cuộc phiêu lưu đang chờ đón
+            bạn...
+          </span>
+          <div class="readmore">
+            <a
+              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02eJem4sn4VZD2kk4WAvDugTStU4UMuMBXjbJ9p4D57svRWiUMjBbyZ7AbhL1rggoGl"
+              class="text3"
+            >
+              Read More</a
+            >
+          </div>
+        </div>
+        <div class="image2">
+          <img
+            src="{{ url_for('static', filename='img/activities_page/activities_page_2.jpg') }}"
+            class="img"
+            alt=""
+          />
+        </div>
+      </div>
+
+      <div class="content_block rounded">
+        <div class="image2">
+          <img
+            src="{{ url_for('static', filename='img/activities_page/activities_page_3.jpg') }}"
+            class="img"
+            alt=""
+            class="anh"
+          />
+        </div>
+        <div class="content2">
+          <div class="block_header">
+            <div class="text1">ECO MÙA TẾT: ĂN TẾT NHƯNG VẪN SỐNG XANH?</div>
+          </div>
+          <span class="text2"
+            >Có lẽ đối với mọi người dân Việt Nam, mùa tết đến chính là khoảng
+            thời gian chúng chúng ta mong chờ nhất trong suốt một năm...
+          </span>
+          <div class="readmore">
+            <a
+              href="https://www.facebook.com/photo?fbid=128195530141901&set=a.107563378871783"
+              class="text3"
+            >
+              Read More</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="content_block rounded">
+        <div class="content2">
+          <div class="block_header">
+            <div class="text1">ECO MEME: GIẢI TRÍ CÙNG ECO SMART VIETNAM</div>
+          </div>
+          <span class="text2"
+            >Meme hay còn được gọi với cái tên thân thương hơn là ảnh chế là một
+            trong những điều không thể thiếu được trong các cuộc trò chuyện giữa
+            bạn bè, hội nhóm ngày nay...
+          </span>
+          <div class="readmore">
+            <a
+              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid02HGfZksdhgGQGhurdfsDJetKQeFuEpPsyD1F5JgUMgL31eFmqvsc2AhG4j7aZSgNXl"
+              class="text3"
+            >
+              Read More</a
+            >
+          </div>
+        </div>
+        <div class="image2">
+          <img
+            src="{{ url_for('static', filename='img/activities_page/activities_page_4.jpg') }}"
+            class="img"
+            alt=""
+          />
+        </div>
+      </div>
+
+      <div class="content_block rounded">
+        <div class="image2">
+          <img
+            src="{{ url_for('static', filename='img/activities_page/activities_page_5.jpg') }}"
+            class="img"
+            alt=""
+          />
+        </div>
+        <div class="content2">
+          <div class="block_header">
+            <div class="text1">Ready for phase 2: TAKING OFF!</div>
+          </div>
+          <span class="text2">#ESV #ECO #ECOSMARTVIETNAM #IMPACT </span>
+          <div class="readmore">
+            <a
+              href="https://www.facebook.com/photo?fbid=126644343630353&set=a.105895305705257"
+              class="text3"
+            >
+              Read More</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
     {% include 'footer.html' %}
- 
-
-</body>
-
+  </body>
 </html>
