--- a/project/templates/activities.html
+++ b/project/templates/activities.html
@@ -23,7 +23,7 @@
     {% include 'navbar.html' %}
 
     <div id="activities_news">
-      <div class="content_block rounded">
+      <div class="content_block ">
         <div class="image2">
           <img
             src="{{ url_for('static', filename='img/activities_page/activities_page_1.jpg') }}"
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-      <div class="content_block rounded">
+      <div class="content_block ">
         <div class="content2">
           <div class="block_header">
             <div class="text1">ECO WRAPUP: CÙNG TỔNG KẾT NĂM CŨ CỦA BẠN</div>
@@ -80,7 +80,7 @@
         </div>
       </div>
 
-      <div class="content_block rounded">
+      <div class="content_block ">
         <div class="image2">
           <img
             src="{{ url_for('static', filename='img/activities_page/activities_page_3.jpg') }}"
@@ -108,7 +108,7 @@
         </div>
       </div>
 
-      <div class="content_block rounded">
+      <div class="content_block ">
         <div class="content2">
           <div class="block_header">
             <div class="text1">ECO MEME: GIẢI TRÍ CÙNG ECO SMART VIETNAM</div>
@@ -136,7 +136,7 @@
         </div>
       </div>
 
-      <div class="content_block rounded">
+      <div class="content_block ">
         <div class="image2">
           <img
             src="{{ url_for('static', filename='img/activities_page/activities_page_5.jpg') }}"
