--- a/project/templates/activities.html
+++ b/project/templates/activities.html
@@ -21,7 +21,10 @@
 
   <body>
     {% include 'navbar.html' %}
-
+    <div class="bodystyle">
+      <div class="head1">
+        <h1>Activities</h1>
+      </div>
     <div id="activities_news">
       <div class="content_block ">
         <div class="image2">
