--- a/project/templates/activities.html
+++ b/project/templates/activities.html
@@ -26,6 +26,36 @@
         <h1>Activities</h1>
       </div>
     <div id="activities_news">
+      
+
+      <div class="content_block ">
+        <div class="image2" >
+          <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_7.jpg') }}"
+            class="img"
+            alt="THE MAGIC OF BIRDSONG - ĐIỀU KÌ DIỆU CỦA TIẾNG CHIM CA"
+          />
+        </div>
+        <div class="content2" style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;">
+          <div class="block_header">
+            <div class="text1">THE MAGIC OF BIRDSONG - ĐIỀU KÌ DIỆU CỦA TIẾNG CHIM CA</div>
+          </div>
+          <span class="text2">
+            Theo một cuộc khảo sát của RSPB - Hiệp hội Bảo vệ Chim Hoàng gia tại Anh được công bố trên Science Reports, 
+            các nhà khoa học phát hiện ra rằng việc ngắm chim và nghe tiếng chim hót có tác động tích cực đến sức khỏe của con người.
+            ...
+          </span>
+          <div class="readmore">
+            <a
+              href="https://www.facebook.com/ecosmartvietnam/posts/pfbid0YYuweWSaGBPiAgebxtzHNoj3CYevq389xZjCJkraEfY1XhzQ6azyztfhRwNk6RjLl"
+              class="text3"
+            >
+              Read More</a
+            >
+          </div>
+        </div>
+      </div>
+
       <div class="content_block ">
         <div class="content2" style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;">
           <div class="block_header">
