--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/product.css') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,10 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+    <div class="bodystyle">
+        <div class="head1">
+          <h1>Product</h1>
+        </div>
     <div class="menu">
         
     <div class="product-items">
