adding elementor pagination and its concernings

--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -249,6 +249,28 @@
       </div>
     </div>
 
+    <div class="elementor-pagination">
+      
+        <div class="page-number-item">
+          <a class="page-number" href="/activities/"><1</a>
+        </div>
+
+        <div class="page-number-item">
+          <a class="page-number" href="/activities/page2/">2</a>
+        </div>
+
+        <div class="page-number-item">
+          <a class="page-number" aria-current="page" href="/activities/page3/">3</a
+          >
+        </div>
+
+        <div class="page-number-item">
+          <a class="page-number" aria-current="page" href="/activities/page4/"
+            >4></a
+          >
+        </div>
+      
+    </div>
     {% include 'footer.html' %}
   </body>
 </html>
