--- a/project/templates/activities/page3.html
+++ b/project/templates/activities/page3.html
@@ -8,125 +8,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="/static/css/activities_page.css"
+      href="{{ url_for('static', filename='css/activities_page.css') }}"
     />
 
     <title>Activities</title>
     <link
       rel="icon"
-      href="/static/img/aboutus/logo.png"
+      href="{{ url_for('static', filename='img/aboutus/logo.png') }}"
       type="image/x-icon"
     />
   </head>
 
   <body>
-    <!-- Made by GPham -->
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation bar</title>
-
-    <!-- Google fonts -->
-
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-      crossorigin="anonymous"
-    />
-
-    <!-- CSS stylesheet -->
-    <link
-      rel="stylesheet"
-      href="/static/css/navbar.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
-
-  <body>
-    <div class="title">
-      <a href="/" id="title-link">
-        <p>ECO SMART VIETNAM</p>
-      </a>
-    </div>
-    <!-- Navbar expands from large and collapses from size smaller than large -->
-    <nav class="navbar navbar-expand-lg" id="navbar-id">
-      <!-- Navbar spans the entire width of any viewport -->
-      <div class="container-fluid">
-        <a href="/" class="navbar-brand">
-          <!-- The logo is inline with the title but also the width and height of the logo is changeable-->
-          <img
-            src="/static/img/aboutus/logo.png"
-            alt="Logo"
-            class="title-logo d-inline-block"
-          />
-        </a>
-
-        <!-- Navbar Toggle contains the elements inside the list with the id of "navbarToggler" -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarToggler"
-          aria-controls="navbarToggler"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!-- The list -->
-
-        <div class="collapse navbar-collapse" id="navbarToggler">
-          <!-- The list is right-aligned (ms-auto)  -->
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="/activities/">Activities</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="/product/">Product</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/about-us/"
-                >About us</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/contact-us/"
-                >Contact Us</a
-              >
-            </li>
-
-            <li class="nav-item">
-              <form class="search-container">
-                <input type="text" placeholder="Search.." />
-                <button type="submit"><i class="fa fa-search"></i></button>
-              </form>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- JS bootstrap -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+    {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
         <h1>Activities</h1>
@@ -153,7 +47,7 @@
         </div>
         <div class="image2">
           <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="/static/img/activities_page/activities_page_8.jpg"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_8.jpg') }}"
             class="img"
             alt=""
           />
@@ -164,7 +58,7 @@
       <div class="content_block ">
         <div class="image2" >
           <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="/static/img/activities_page/activities_page_7.jpg"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_7.jpg') }}"
             class="img"
             alt="THE MAGIC OF BIRDSONG - ĐIỀU KÌ DIỆU CỦA TIẾNG CHIM CA"
           />
@@ -209,7 +103,7 @@
         </div>
         <div class="image2">
           <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="/static/img/activities_page/activities_page_6.jpg"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_6.jpg') }}"
             class="img"
             alt=""
           />
@@ -220,7 +114,7 @@
       <div class="content_block ">
         <div class="image2" >
           <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="/static/img/activities_page/activities_page_1.jpg"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_1.jpg') }}"
             class="img"
             alt="TẾT CỦA CÔNG DÂN TOÀN CẦU CÓ GÌ KHÁC BIỆT?"
           />
@@ -267,7 +161,7 @@
         </div>
         <div class="image2">
           <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="/static/img/activities_page/activities_page_2.jpg"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_2.jpg') }}"
             class="img"
             alt=""
           />
@@ -277,7 +171,7 @@
       <div class="content_block ">
         <div class="image2">
           <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="/static/img/activities_page/activities_page_3.jpg"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_3.jpg') }}"
             class="img"
             alt=""
             class="anh"
@@ -323,7 +217,7 @@
         </div>
         <div class="image2">
           <img style="border-top-right-radius: 5%; border-bottom-right-radius: 5%;"
-            src="/static/img/activities_page/activities_page_4.jpg"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_4.jpg') }}"
             class="img"
             alt=""
           />
@@ -333,7 +227,7 @@
       <div class="content_block ">
         <div class="image2">
           <img style="border-top-left-radius: 5%; border-bottom-left-radius: 5%;"
-            src="/static/img/activities_page/activities_page_5.jpg"
+            src="{{ url_for('static', filename='img/activities_page/activities_page_5.jpg') }}"
             class="img"
             alt=""
           />
@@ -377,49 +271,6 @@
         </div>
       
     </div>
-    <link rel="stylesheet" href="/static/css/footer.css" />
-<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
-<div class="background_footer">
-    <p class="footer-style">
-        All rights reserved by
-        <a href="https://www.facebook.com/ecosmartvietnam">ECO SMART VIETNAM</a>
-    </p>
-    <div>
-        <a href="https://www.facebook.com/ecosmartvietnam"><img class="footerimages" src="/static/img/footer/facebook.png" alt="" /></a>
-        <a href="https://www.instagram.com/ecosmart.vietnam/"><img class="footerimages" src="/static/img/footer/ins.gif" alt="" /></a>
-    </div>
-</div>
-    <script>
-      $ (window).on("load",function(){
-        $(".loader").fadeOut("slow");
-      })
-
-    </script>
-    <style>
-      .loader{
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: azure;
-        transition: opacity 2s, visibility 2s;
-    }
-    </style>
-  
-  <div class="loader">
-      <div class="spinner-grow text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-grow text-secondary" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-      <div class="spinner-grow text-success" role="status">
-        <span class="visually-hidden">Loading...</span>
-      </div>
-    </div>
+    {% include 'footer.html' %}
   </body>
 </html>
