--- a/project/templates/product.html
+++ b/project/templates/product.html
@@ -6,24 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/product.css') }}">
-            <!-- fonts -->
+        <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400&display=swap" rel="stylesheet">
         <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <!-- logo -->
-        <link
-        rel="icon"
-        href="{{ url_for('static', filename='img/aboutus/logo.png') }}"
-        type="image/x-icon"
-      />    
+
 </head>
 <body>
     {% include 'navbar.html' %}
     <div class="bodystyle">
-        <div class="head1">
-          <h1>Product</h1>
+        <div id="head1">
+          <h1 id="head1-h1">Product</h1>
         </div>
     <div class="menu">
         
