--- a/project/templates/slideshow.html
+++ b/project/templates/slideshow.html
@@ -20,112 +20,128 @@
   </head>
 
   <body>
-    <div class="myContainer rounded">
-      <div id="carouselMain" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselMain"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
+    <div class="container d-flex flex-row">
+      <div class="myContainer rounded col-md-7">
+        <div id="carouselMain" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselMain"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+
+            <button
+              type="button"
+              data-bs-target="#carouselMain"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+
+            <button
+              type="button"
+              data-bs-target="#carouselMain"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+
+            <button
+              type="button"
+              data-bs-target="#carouselMain"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+          </div>
+
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="{{ url_for('static', filename='img/slideshow/1.jpg') }}"
+                class="d-block w-100"
+                alt="slide1"
+              />
+              <div class="carousel-caption d-none d-lg-block">
+                <p class="description-slide">Slide 1</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="{{ url_for('static', filename='img/slideshow/2.jpg') }}"
+                class="d-block w-100"
+                alt="slide2"
+              />
+              <div class="carousel-caption d-none d-lg-block">
+                <p class="description-slide">Slide 2</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="{{ url_for('static', filename='img/slideshow/3.jpg') }}"
+                class="d-block w-100"
+                alt="slide3"
+              />
+              <div class="carousel-caption d-none d-lg-block">
+                <p class="description-slide">Slide 3</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="{{ url_for('static', filename='img/slideshow/4.jpg') }}"
+                class="d-block w-100"
+                alt="slide4"
+              />
+              <div class="carousel-caption d-none d-lg-block">
+                <p class="description-slide">Slide 4</p>
+              </div>
+            </div>
+          </div>
 
           <button
+            class="carousel-control-prev"
             type="button"
             data-bs-target="#carouselMain"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-
+            data-bs-slide="prev"
+          >
+            <span
+              class="carousel-control-prev-icon"
+              id="prev-button"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
           <button
+            class="carousel-control-next"
             type="button"
             data-bs-target="#carouselMain"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
-
-          <button
-            type="button"
-            data-bs-target="#carouselMain"
-            data-bs-slide-to="3"
-            aria-label="Slide 4"
-          ></button>
+            data-bs-slide="next"
+          >
+            <span
+              class="carousel-control-next-icon"
+              id="next-button"
+              aria-hidden="true"
+            ></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="{{ url_for('static', filename='img/slideshow/1.jpg') }}"
-              class="d-block w-100"
-              alt="slide1"
-            />
-            <div class="carousel-caption d-none d-lg-block">
-              <p class="description-slide">Slide 1</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="{{ url_for('static', filename='img/slideshow/2.jpg') }}"
-              class="d-block w-100"
-              alt="slide2"
-            />
-            <div class="carousel-caption d-none d-lg-block">
-              <p class="description-slide">Slide 2</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="{{ url_for('static', filename='img/slideshow/3.jpg') }}"
-              class="d-block w-100"
-              alt="slide3"
-            />
-            <div class="carousel-caption d-none d-lg-block">
-              <p class="description-slide">Slide 3</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="{{ url_for('static', filename='img/slideshow/4.jpg') }}"
-              class="d-block w-100"
-              alt="slide4"
-            />
-            <div class="carousel-caption d-none d-lg-block">
-              <p class="description-slide">Slide 4</p>
-            </div>
-          </div>
-        </div>
-
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselMain"
-          data-bs-slide="prev"
-        >
-          <span
-            class="carousel-control-prev-icon"
-            id="prev-button"
-            aria-hidden="true"
-          ></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselMain"
-          data-bs-slide="next"
-        >
-          <span
-            class="carousel-control-next-icon"
-            id="next-button"
-            aria-hidden="true"
-          ></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      </div>
+      <div class="col-md-4">
+        <ul class="list-group">
+          <li class="list-group-item active" aria-current="true">
+            Trang thông tin
+          </li>
+          <li class="list-group-item">
+            <a href="aboutus.html"> về chúng tôi</a>
+          </li>
+          <li class="list-group-item">
+            <a href="ourteam.html"> về thành viên</a>
+          </li>
+          <li class="list-group-item"><a href="aboutus.html"> Sản phẩm</a></li>
+          <li class="list-group-item"><a href="#"> liên hệ</a></li>
+        </ul>
       </div>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
