--- a/project/templates/aboutus.html
+++ b/project/templates/aboutus.html
@@ -21,9 +21,14 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/aboutus.css') }}"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body>
+  <body style="font-family: 'Heebo', sans-serif">
     {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
