--- a/project/templates/activities/activities.html
+++ b/project/templates/activities/activities.html
@@ -1,5 +1,4 @@
-<!-- “Activity page used for providing users activities information
-//Made by Anh Khôi” -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,15 +16,19 @@
       href="{{ url_for('static', filename='img/aboutus/logo.png') }}"
       type="image/x-icon"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body>
+  <body style="font-family: 'Heebo', sans-serif">
     {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
         <h1>Activities</h1>
       </div>
-      
     <div id="activities_news">
       
       <div class="content_block ">
@@ -250,28 +253,6 @@
       </div>
     </div>
 
-    <div class="elementor-pagination">
-      
-        <div class="page-number-item">
-          <a class="page-number" href="/activities/"><1</a>
-        </div>
-
-        <div class="page-number-item">
-          <a class="page-number" href="/activities/page2/">2</a>
-        </div>
-
-        <div class="page-number-item">
-          <a class="page-number" aria-current="page" href="/activities/page3/">3</a
-          >
-        </div>
-
-        <div class="page-number-item">
-          <a class="page-number" aria-current="page" href="/activities/page4/"
-            >4></a
-          >
-        </div>
-      
-    </div>
     {% include 'footer.html' %}
   </body>
 </html>
