--- a/project/templates/activities/page2.html
+++ b/project/templates/activities/page2.html
@@ -17,9 +17,14 @@
       href="{{ url_for('static', filename='img/aboutus/logo.png') }}"
       type="image/x-icon"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body>
+  <body style="font-family: 'Heebo', sans-serif">
     {% include 'navbar.html' %}
     <div class="bodystyle">
       <div class="head1">
