--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -16,7 +16,7 @@
       quae maiores odit nobis dolorem atque incidunt, ipsam a nemo ipsa
       blanditiis cumque repudiandae, perferendis, omnis et eaque ad obcaecati.
     </p>
-    <ul class="socials">
+    <!-- <ul class="socials">
       <li>
         <a href="https://www.facebook.com/ecosmartvietnam"
           ><i class="fa fa-facebook"></i
@@ -33,10 +33,10 @@
       <li>
         <a href="#"><i class="fa fa-youtube"></i></a>
       </li>
-      <li>
+      <!-- <li>
         <a href="#"><i class="fa fa-linkedin-square"></i></a>
-      </li>
-    </ul>
+      </li> 
+     </ul> -->
   </div>
   <div class="footer-bottom">
     <p>copyright &copy; <a href="#">ecosmartvietnam</a></p>
