--- a/project/templates/scrolling.html
+++ b/project/templates/scrolling.html
@@ -1,19 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scrolling Button</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/scrolling.css') }}">
-    <script type="text/javascript" src="{{ url_for('static', filename='js/scrolling.js') }}"></script>
-</head>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/scrolling.css') }}"
+    />
+    <script
+      type="text/javascript"
+      src="{{ url_for('static', filename='js/scrolling.js') }}"
+    ></script>
+  </head>
 
-<body>
-    <div class="button-show-scroll">
+  <body>
+    <div class="title1">
+      <div class="image-left flex-item">
+        <img
+          class="env-img"
+          src="{{ url_for('static', filename='img/index/test.png') }}"
+          alt="test"
+        />
+      </div>
+      <div class="content-right flex-item">
+        <h1 class="heading1">Eco Smart Vietnam</h1>
+        <h2 class="heading2">Eco - Aware - Act</h2>
+
+        <p>
+          A pioneer in promoting the development of <br />
+          environmentally friendly products.
+        </p>
+
         <a class="button-scroll" href="#aboutus-scroll">Read more</a>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
