--- a/project/templates/slideshow.html
+++ b/project/templates/slideshow.html
@@ -1,151 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Slideshow</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/slideshow.css') }}"
-    />
-
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+    />
+    <title>Demo Carousel</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/slideshow.css') }}"
+    />
   </head>
 
   <body>
-    <div class="container d-flex flex-row">
-      <div class="myContainer rounded col-md-7">
-        <div id="carouselMain" class="carousel slide" data-bs-ride="true">
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselMain"
-              data-bs-slide-to="0"
-              class="active"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
+    <h1 class="h1ofslideshow">Environmental Facts</h1>
+    <div class="container-fluid my-5" id="container-slideshow">
+      <div class="row">
+        <div class="col-12 m-auto">
+          <div class="owl-carousel owl-theme">
+            <div class="item mb-4">
+              <div class="card">
+                <a
+                  href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782"
+                >
+                  <img
+                    src="{{ url_for('static', filename='img/activities/activities1.jpg') }}"
+                    alt="activites1"
+                    class="card-img-top"
+                  />
+                </a>
+              </div>
+            </div>
 
-            <button
-              type="button"
-              data-bs-target="#carouselMain"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
+            <div class="item">
+              <div class="card">
+                <a
+                  href="https://www.facebook.com/photo.php?fbid=137191855908935&set=pb.100088543633780.-2207520000.&type=3"
+                >
+                  <img
+                    src="{{ url_for('static', filename='img/activities/activities2.jpg') }}"
+                    alt="activites2"
+                    class="card-img-top"
+                /></a>
+              </div>
+            </div>
 
-            <button
-              type="button"
-              data-bs-target="#carouselMain"
-              data-bs-slide-to="2"
-              aria-label="Slide 3"
-            ></button>
+            <div class="item">
+              <div class="card">
+                <a
+                  href="https://www.facebook.com/photo.php?fbid=134825176145603&set=pb.100088543633780.-2207520000.&type=3"
+                >
+                  <img
+                    src="{{ url_for('static', filename='img/activities/activities3.jpg') }}"
+                    alt="activites3"
+                    class="card-img-top"
+                /></a>
+              </div>
+            </div>
 
-            <button
-              type="button"
-              data-bs-target="#carouselMain"
-              data-bs-slide-to="3"
-              aria-label="Slide 4"
-            ></button>
+            <div class="item">
+              <div class="card">
+                <a
+                  href="https://www.facebook.com/photo?fbid=112881635006624&set=pcb.112882615006526"
+                >
+                  <img
+                    src="{{ url_for('static', filename='img/activities/activities4.jpg') }}"
+                    alt="activites4"
+                    class="card-img-top"
+                  />
+                </a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="card">
+                <a
+                  href="https://www.facebook.com/photo?fbid=112881805006607&set=pcb.112882615006526"
+                >
+                  <img
+                    src="{{ url_for('static', filename='img/activities/activities5.jpg') }}"
+                    alt="activites5"
+                    class="card-img-top"
+                /></a>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="card">
+                <a
+                  href="https://www.facebook.com/photo/?fbid=117929084501879&set=pcb.117926967835424"
+                >
+                  <img
+                    src="{{ url_for('static', filename='img/activities/activities6.jpg') }}"
+                    alt="activites6"
+                    class="card-img-top"
+                /></a>
+              </div>
+            </div>
+            <div class="item">
+              <div class="card">
+                <a
+                  href="https://www.facebook.com/photo.php?fbid=134825202812267&set=pb.100088543633780.-2207520000.&type=3"
+                >
+                  <img
+                    src="{{ url_for('static', filename='img/activities/activities7.jpg') }}"
+                    alt="activites7"
+                    class="card-img-top"
+                /></a>
+              </div>
+            </div>
           </div>
-
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="{{ url_for('static', filename='img/slideshow/1.jpg') }}"
-                class="d-block w-100"
-                alt="slide1"
-              />
-              <div class="carousel-caption d-none d-lg-block">
-                <p class="description-slide">Slide 1</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="{{ url_for('static', filename='img/slideshow/2.jpg') }}"
-                class="d-block w-100"
-                alt="slide2"
-              />
-              <div class="carousel-caption d-none d-lg-block">
-                <p class="description-slide">Slide 2</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="{{ url_for('static', filename='img/slideshow/3.jpg') }}"
-                class="d-block w-100"
-                alt="slide3"
-              />
-              <div class="carousel-caption d-none d-lg-block">
-                <p class="description-slide">Slide 3</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img
-                src="{{ url_for('static', filename='img/slideshow/4.jpg') }}"
-                class="d-block w-100"
-                alt="slide4"
-              />
-              <div class="carousel-caption d-none d-lg-block">
-                <p class="description-slide">Slide 4</p>
-              </div>
-            </div>
-          </div>
-
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselMain"
-            data-bs-slide="prev"
-          >
-            <span
-              class="carousel-control-prev-icon"
-              id="prev-button"
-              aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselMain"
-            data-bs-slide="next"
-          >
-            <span
-              class="carousel-control-next-icon"
-              id="next-button"
-              aria-hidden="true"
-            ></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
-      <div class="col-md-4">
-        <ul class="list-group">
-          <li class="list-group-item active" aria-current="true">
-            Trang thông tin
-          </li>
-          <li class="list-group-item">
-            <a href="aboutus.html"> về chúng tôi</a>
-          </li>
-          <li class="list-group-item">
-            <a href="ourteam.html"> về thành viên</a>
-          </li>
-          <li class="list-group-item"><a href="aboutus.html"> Sản phẩm</a></li>
-          <li class="list-group-item"><a href="#"> liên hệ</a></li>
-        </ul>
-      </div>
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $(".owl-carousel").owlCarousel({
+        loop: true,
+        margin: 15,
+        nav: true,
+        responsive: {
+          0: {
+            items: 1,
+          },
+          600: {
+            items: 2,
+          },
+          1000: {
+            items: 3,
+          },
+        },
+        navText: ["<", ">"],
+      });
+    </script>
   </body>
 </html>
