--- a/project/static/css/footer.css
+++ b/project/static/css/footer.css
@@ -1,16 +1,15 @@
-
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-  }
-  body {
-    background: #ffffff;
+}
+
+body {
+    background: #285430;
     font-family: sans-serif;
-  }
-  footer {
+}
+
+footer {
     position: relative;
     bottom: 0;
     left: 0;
@@ -18,105 +17,116 @@
     background: rgb(254, 255, 222);
     height: auto;
     width: 100vw;
-
     padding-top: 40px;
     color: #000000;
+}
 
-    
-  }
-  .footer-content {
+.footer-content {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     text-align: center;
-  }
-  .footer-content h3 {
+}
+
+.footer-content h3 {
     font-size: 2.1rem;
     font-weight: 500;
     text-transform: capitalize;
     line-height: 3rem;
-  }
-  .footer-content p {
+}
+
+.footer-content p {
     max-width: 500px;
     margin: 10px auto;
     line-height: 28px;
     font-size: 14px;
     color: #000000;
-  }
-  .socials {
+}
+
+.socials {
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 1rem 0 3rem 0;
-  }
-  .socials li {
+}
+
+.socials li {
     margin: 0 10px;
-  }
-  .socials a {
+}
+
+.socials a {
     text-decoration: none;
     color: #000000;
     border: 1.1px solid white;
     padding: 5px;
-
     border-radius: 50%;
-  }
-  .socials a i {
+}
+
+.socials a i {
     font-size: 1.1rem;
     width: 20px;
-
     transition: color 0.4s ease;
-  }
-  .socials a:hover i {
-    color: aqua;
-  }
+}
 
-  .footer-bottom {
+.socials a:hover i {
+    color: aqua;
+}
+
+.footer-bottom {
     background: rgb(229, 231, 181);
     width: 100vw;
     padding: 20px;
     padding-bottom: 40px;
     text-align: center;
-  }
-  .footer-bottom p {
+}
+
+.footer-bottom p {
     float: left;
     font-size: 14px;
     word-spacing: 2px;
     text-transform: capitalize;
-  }
-  .footer-bottom p a {
+}
+
+.footer-bottom p a {
     color: #44bae8;
     font-size: 16px;
     text-decoration: none;
-  }
-  .footer-bottom span {
+}
+
+.footer-bottom span {
     text-transform: uppercase;
     opacity: 0.4;
     font-weight: 200;
-  }
-  .footer-menu {
+}
+
+.footer-menu {
     float: right;
-  }
-  .footer-menu ul {
+}
+
+.footer-menu ul {
     display: flex;
-  }
-  .footer-menu ul li {
+}
+
+.footer-menu ul li {
     padding-right: 10px;
     display: block;
-  }
-  .footer-menu ul li a {
+}
+
+.footer-menu ul li a {
     color: #545455;
     text-decoration: none;
-  }
-  .footer-menu ul li a:hover {
-    color: #27bcda;
-  }
+}
 
-  @media (max-width: 500px) {
+.footer-menu ul li a:hover {
+    color: #27bcda;
+}
+
+@media (max-width: 500px) {
     .footer-menu ul {
-      display: flex;
-      margin-top: 10px;
-      margin-bottom: 20px;
+        display: flex;
+        margin-top: 10px;
+        margin-bottom: 20px;
     }
-  }
+}
