--- a/project/templates/footer.html
+++ b/project/templates/footer.html
@@ -7,6 +7,8 @@
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 />
+<!--jquery for loading page-->
+  <script src="jquery-2.1.4.js"></script>
 
 <footer>
   <div class="footer-content">
@@ -50,7 +52,7 @@
     </div>
   </div>
 </footer>
-<!-- <script>
+<script>
   $(window).on("load", function () {
     $(".loader").fadeOut("slow");
   });
