--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -30,7 +30,7 @@
     {% include 'navbar.html' %}
 
     <!-- include body.html here -->
-    {% include 'scrolling.html' %} {% include 'slideshow.html' %} {% include
+    {% include 'scrolling.html' %} {% include 'slideshow.html' %} {% include 'productfeature.html' %}{% include
     'video.html' %}
     <div>{% include 'aboutus_content.html' %}</div>
     {% include 'footer.html' %}
