--- a/project/templates/productfeature.html
+++ b/project/templates/productfeature.html
@@ -27,103 +27,103 @@
     <title>Demo Carousel</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/slideshow.css') }}"
+      href="{{ url_for('static', filename='css/productfeature.css') }}"
     />
   </head>
 
   <body>
-    <h1 class="h1ofslideshow">Environmental Facts</h1>
-    <div class="container-fluid my-5" id="container-slideshow">
+    <h1 class="h1ofslideshow">Products</h1>
+    <div class="container-fluid my-5" id="container-product">
       <div class="row">
         <div class="col-12 m-auto">
-          <div class="owl-1 owl-carousel owl-theme">
+          <div class="owl-2 owl-carousel owl-theme">
             <div class="item mb-4">
-              <div class="cardofslideshow">
+              <div class="cardofproduct">
                 <a
                   href="https://www.facebook.com/photo/?fbid=107995395495248&set=pcb.107563388871782"
                 >
                   <img
                     src="{{ url_for('static', filename='img/activities/activities1.jpg') }}"
                     alt="activites1"
-                    class="card-img-topofslideshow"
+                    class="card-img-topofproduct"
                   />
                 </a>
               </div>
             </div>
 
             <div class="item">
-              <div class="cardofslideshow">
+              <div class="cardofproduct">
                 <a
                   href="https://www.facebook.com/photo.php?fbid=137191855908935&set=pb.100088543633780.-2207520000.&type=3"
                 >
                   <img
                     src="{{ url_for('static', filename='img/activities/activities2.jpg') }}"
                     alt="activites2"
-                    class="card-img-topofslideshow"
+                    class="card-img-topofproduct"
                 /></a>
               </div>
             </div>
 
             <div class="item">
-              <div class="cardofslideshow">
+              <div class="cardofproduct">
                 <a
                   href="https://www.facebook.com/photo.php?fbid=134825176145603&set=pb.100088543633780.-2207520000.&type=3"
                 >
                   <img
                     src="{{ url_for('static', filename='img/activities/activities3.jpg') }}"
                     alt="activites3"
-                    class="card-img-topofslideshow"
+                    class="card-img-topofproduct"
                 /></a>
               </div>
             </div>
 
             <div class="item">
-              <div class="cardofslideshow">
+              <div class="cardofproduct">
                 <a
                   href="https://www.facebook.com/photo?fbid=112881635006624&set=pcb.112882615006526"
                 >
                   <img
                     src="{{ url_for('static', filename='img/activities/activities4.jpg') }}"
                     alt="activites4"
-                    class="card-img-topofslideshow"
+                    class="card-img-topofproduct"
                   />
                 </a>
               </div>
             </div>
             <div class="item">
-              <div class="cardofslideshow">
+              <div class="cardofproduct">
                 <a
                   href="https://www.facebook.com/photo?fbid=112881805006607&set=pcb.112882615006526"
                 >
                   <img
                     src="{{ url_for('static', filename='img/activities/activities5.jpg') }}"
                     alt="activites5"
-                    class="card-img-topofslideshow"
+                    class="card-img-topofproduct"
                 /></a>
               </div>
             </div>
 
             <div class="item">
-              <div class="cardofslideshow">
+              <div class="cardofproduct">
                 <a
                   href="https://www.facebook.com/photo/?fbid=117929084501879&set=pcb.117926967835424"
                 >
                   <img
                     src="{{ url_for('static', filename='img/activities/activities6.jpg') }}"
                     alt="activites6"
-                    class="card-img-topofslideshow"
+                    class="card-img-topofproduct"
                 /></a>
               </div>
             </div>
             <div class="item">
-              <div class="cardofslideshow">
+              <div class="cardofproduct">
                 <a
                   href="https://www.facebook.com/photo.php?fbid=134825202812267&set=pb.100088543633780.-2207520000.&type=3"
                 >
                   <img
                     src="{{ url_for('static', filename='img/activities/activities7.jpg') }}"
                     alt="activites7"
-                    class="card-img-topofslideshow"
+                    class="card-img-topofproduct"
                 /></a>
               </div>
             </div>
@@ -147,7 +147,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      $(".owl-1").owlCarousel({
+      $(".owl-2").owlCarousel({
         loop: true,
         margin: 15,
         nav: true,
