chỉnh nút slideshow

--- a/project/templates/slideshow.html
+++ b/project/templates/slideshow.html
@@ -162,7 +162,7 @@
             items: 3,
           },
         },
-        navText: ["<", ">"],
+        navText: ["<img src={{ url_for('static', filename='img/slideshow/prev button.png') }}>","<img src={{ url_for('static', filename='img/slideshow/next button.png') }}>"]
       });
     </script>
   </body>
